# lean_buffer

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
examples/: diy.rs  merged.rs  usage.rs  usage_mixed.rs  usage_opts.rs  usage_raw.rs  usage_vecs.rs
internal/: Cargo.toml
internal/src/: core.rs  lib.rs  util.rs
macros/: Cargo.toml  README.md
macros/src/: lib.rs
src/: lib.rs  traits.rs
