[package]
name = "lean-buffer"
version = "0.2.0"
edition = "2021"

[dependencies]
lean-buffer-internal = { path = "internal" }
lean-buffer-macros = { path = "macros" }
flatbuffers = "22.10.26"

[build-dependencies]
lean-buffer-internal = { path = "internal" }

[dev-dependencies]
syn = { version = "2.0.31", default-features = false, features = ["full"] }
darling = "0.20.3"
