[package]
name = "lean-buffer-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
lean-buffer-internal = { path = "../internal" }
proc-macro2 = { version = "1.0", default-features = false }
syn = { version = "2.0.31", default-features = false, features = ["full"] }
darling = "0.20.3"
